# MultiCompress

./: CMakeLists.txt  README.md  main.cpp
include/: huffman.hpp  rle.hpp
src/: CMakeLists.txt  huffman.cpp  rle.cpp
test/: CMakeLists.txt  test_main.cpp
